--- a/Ottergram/index.html
+++ b/Ottergram/index.html
@@ -16,7 +16,7 @@
     <main class="main-content">
         <ul class="thumbnail-list">
             <li class="thumbnail-item">
-                <a href="#">
+                <a href="img/otter1.jpg">
                     <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the Otter">
                     <span class="thumbnail-title">Barry</span>
                 </a>
